--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,79 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+font-family: 'Medieval'; /* Nombre de la fuente */
+src: url('/font/MedievalSharp-Bold.ttf') format('truetype'); /* Ruta relativa a la fuente TTF */
+font-weight: normal;
+font-style: normal;
+}
+
+@font-face {
+font-family: 'Medieval-Light'; /* Nombre de la fuente */
+src: url('/font/MedievalSharp-Book.ttf') format('truetype'); /* Ruta relativa a la fuente TTF */
+font-weight: normal;
+font-style: normal;
+}
+
+@font-face {
+font-family: 'OldLondon'; /* Nombre de la fuente */
+src: url('/font/OldLondon.ttf') format('truetype'); /* Ruta relativa a la fuente TTF */
+font-weight: normal;
+font-style: normal;
+}
+@font-face {
+font-family: 'Dumbledore'; /* Nombre de la fuente */
+src: url('/font/dum1.ttf') format('truetype'); /* Ruta relativa a la fuente TTF */
+font-weight: normal;
+font-style: normal;
+}
+
+
+body {
+  background-color: #ffffff; /* Fondo blanco */
+  margin: 0;
+  min-height: 100vh; /* Altura mínima igual al viewport */
+  background-image: url('/img/background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat; /* Evitar repetición */
+  background-position: center; /* Centrar la imagen */
+}
+
+p {
+  font-family: 'Dumbledore'; /* Aplicar la fuente Medieval */
+  text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 21px;
+}
+
+.link {
+  font-family: 'Medieval'; /* Aplicar la fuente Medieval */
+  text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+ul {
+  font-family: 'Dumbledore'; /* Aplicar la fuente Medieval */
+  margin-left: 10%;
+  margin-right: 10%;
+  font-size: 21px;
+}
+
+
+h1 {
+  font-family: 'OldLondon', sans-serif; /* Aplicar la fuente Medieval */
+  text-align: center;
+}
+
+.image {
+  margin-top: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 500px;
+  width: 90%; /* Esto garantiza que el ancho máximo sea 90% del contenedor, dejando un margen del 5% a cada lado */
+}
+
+.importante {
+  color: red;
+}
+
