actualizacion de preguntas y prueba de carga desde gitHub

--- a/src/app/pages/mas-info/mas-info.component.html
+++ b/src/app/pages/mas-info/mas-info.component.html
@@ -39,4 +39,16 @@
   <p class="pregunta">Nada, gracias!</p>
   <p class="respuesta">Nada, de nada!</p>
 
+  <p class="pregunta">Embarazados!!</p>
+  <p class="respuesta">VAAAAAAAMOOOOOOOOOSSSSSS!!!!</p>
+
+  <p class="pregunta">El que habla es sólo Julio xD</p>
+  <p class="respuesta">Julio es una criatura exótica, quizás deberíamos alejarle de los micrófonos.</p>
+
+  <p class="pregunta">No sé si quiero hablar. Me da palo y de momento digo no</p>
+  <p class="respuesta">La vergüenza es algo de lo que habrá poco en esta boda</p>
+
+  <p class="pregunta">No</p>
+  <p class="respuesta">O Si, ¿quién sabe?</p>
+
 </div>
