[10/08/2024] Actualizacion de preguntas

--- a/src/app/pages/mas-info/mas-info.component.html
+++ b/src/app/pages/mas-info/mas-info.component.html
@@ -51,4 +51,7 @@
   <p class="pregunta">No</p>
   <p class="respuesta">O Si, ¿quién sabe?</p>
 
+  <p class="pregunta">¿hay plan de emergencias para partos inminentes?</p>
+  <p class="respuesta">A la boda asistirán médicos, enfermeros, celadores, anatomopatólogos y abuelos orgullosos, no creo que haya problema para partos de emergencia.</p>
+
 </div>
