--- a/src/app/pages/pregonero/pregonero.component.html
+++ b/src/app/pages/pregonero/pregonero.component.html
@@ -1,21 +1,22 @@
 <div class="tavern">
-    <!-- Condición para mostrar el contenido -->
-    @if (showPregonero) {
-      <img class="pregonero" src="/img/pregonero.png" alt="">
+  <!-- Condición para mostrar el contenido -->
+  @if (showPregonero) {
+    <img class="pregonero" src="/img/pregonero.png" alt="">
 
-    }@if (showBocadillo) {
-      <div class="bocadillo">
-        <p>{{ dialogText }}</p>
-      </div>
-      @if (showWhiteBocadillo) {
+  }
+  @if (showBocadillo) {
+    <div class="bocadillo">
+      <p>{{ dialogText }}</p>
+    </div>
+    @if (showWhiteBocadillo) {
       <div class="white-bocadillo">
-        <input type="text" [(ngModel)]="inputText" (keydown.enter)="onEnter()" placeholder="Escribe aquí..." class="invisible-input">
+        <input type="text" [(ngModel)]="inputText" (keydown.enter)="onEnter()" placeholder="Escribe aquí..."
+               class="invisible-input">
       </div>
-      }
     }
+  }
 
-        <div class="recordatorio">
-          <p (click)="refreshPage()">Volver</p>
-        </div>
+  <div class="recordatorio">
+    <p (click)="refreshPage()">Volver</p>
+  </div>
 </div>
-  
