--- a/src/app/pages/mas-info/mas-info.component.html
+++ b/src/app/pages/mas-info/mas-info.component.html
@@ -21,6 +21,9 @@
   <p class="pregunta">Os como la cara</p>
   <p class="respuesta">La comedura es mutua</p>
 
+  <p class="pregunta">¿Cuál era el nombre de la calle de la primera morada de estos dos seres que se unirán?</p>
+  <p class="respuesta">?????????????????????????????????????????????????</p>
+
   <p class="pregunta">Dresscode?</p>
   <p class="respuesta">Pregunta 1, Gracias!</p>
 
