[31/08/2024] traducidos al hindi las pruebas y camuflada la del horoscopo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="warning-overlay" *ngIf="showWarning">
   <div class="warning-card">
-    <h1>Estimada Maga suprema</h1>
+    <h1>प्रिय सर्वोच्च जादूगर</h1>
     <p>
-      Me siento orgullosa de darla la noticia de que el encantamiento para el cierre magico está terminado.
-      Es casi imposible de descifrar ya que requiere de un complejo galimatias linguistico para poder descubrirlo.
+      मुझे यह खबर सुनाते हुए गर्व हो रहा है कि जादुई समापन के लिए मंत्र समाप्त हो गया है।
+      इसे समझना लगभग असंभव है क्योंकि इसे खोजने के लिए जटिल भाषाई अस्पष्टता की आवश्यकता होती है।
     </p>
     <p class="pista">_ | _ _ _ _</p>
     <p class="pista">_ | _ _ _</p>
@@ -13,10 +13,9 @@
     <p class="pista">_ | _ _ _ _ _</p>
     <p class="pista">_ | _ _ _ _ _ _ _</p>
     <p>
-Dejo esta nota como recordatorio de su funcionamiento, solo espero que no se me estravíe.
-    </p>
-    <p class="signature">Una humilde servidora.</p>
-    <p>PD. ¿Cuál es el objeto por el cual nuestro novio se inició en las artes musicales?</p>
+      मैं इस नोट को एक अनुस्मारक के रूप में छोड़ता हूं कि यह कैसे काम करता है, मैं बस आशा करता हूं कि यह खो न जाए।    </p>
+    <p class="signature">एक विनम्र सेवक.</p>
+    <p>पी.एस. वह क्या उद्देश्य है जिसके लिए हमारे प्रेमी ने संगीत कला में शुरुआत की?</p>
     <button (click)="togglewarning()">Regresar</button>
   </div>
 </div>
