--- a/src/app/pages/mas-info/mas-info.component.html
+++ b/src/app/pages/mas-info/mas-info.component.html
@@ -21,9 +21,6 @@
   <p class="pregunta">Os como la cara</p>
   <p class="respuesta">La comedura es mutua</p>
 
-  <p class="pregunta">¿Cuál era el nombre de la calle de la primera morada de estos dos seres que se unirán?</p>
-  <p class="respuesta">?????????????????????????????????????????????????</p>
-
   <p class="pregunta">Dresscode?</p>
   <p class="respuesta">Pregunta 1, Gracias!</p>
 
@@ -47,6 +44,9 @@
 
   <p class="pregunta">El que habla es sólo Julio xD</p>
   <p class="respuesta">Julio es una criatura exótica, quizás deberíamos alejarle de los micrófonos.</p>
+
+  <p class="pregunta">जो दो प्राणी एक हो जायेंगे उनके पहले घर की सड़क का क्या नाम था?</p>
+  <p class="respuesta">?????????????????????????????????????????????????</p>
 
   <p class="pregunta">No sé si quiero hablar. Me da palo y de momento digo no</p>
   <p class="respuesta">La vergüenza es algo de lo que habrá poco en esta boda</p>
