[31/08/2024] traducidos al hindi las pruebas y camuflada la del horoscopo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
   </div>
   <div class="town">
 
-    <img class="button-image" src="/img/town.png" alt="" usemap="#image-map">
+    <img class="button-image" src="/img/pueblo.png" alt="" usemap="#image-map">
     <a class="images" (click)="togglePregonero()"></a>
     <a class="images2" (click)="togglewarning()"></a>
     <a class="images3" routerLink="/cave"></a>
