[31/08/2024] redimensionando cartel de pista

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     <p class="pista">_ | _ _ _ _ _</p>
     <p class="pista">_ | _ _ _ _ _</p>
     <p class="pista">_ | _ _ _ _ _</p>
-    <p class="pista">_ | _ _ _ _ _ _ _</p>
+    <p class="pista">_ | _ _ _ _ _ _ _</p><br>
     <p>
       मैं इस नोट को एक अनुस्मारक के रूप में छोड़ता हूं कि यह कैसे काम करता है, मैं बस आशा करता हूं कि यह खो न जाए।    </p>
     <p class="signature">एक विनम्र सेवक.</p>
