[31/08/2024] Modificando Taberna para que sea un elemento independiente de index, cambiamos su musica y dialogo del taberenero, eliminamos el acceso al miestery component e incluimos musica a cave

--- a/src/app/pages/cave/cave.component.html
+++ b/src/app/pages/cave/cave.component.html
@@ -13,6 +13,7 @@
   </div>
 </div>
 <div class="cave-container">
+  <audio id="background-audio2" type="audio/mp3" src="/audio/cave-background.mp3" autoplay loop></audio>
   <div class="background-image">
     @if (startText) {
       <!-- Bocadillo de diálogo para los primeros tres -->
