--- a/src/app/pages/mistery/mistery.component.html
+++ b/src/app/pages/mistery/mistery.component.html
@@ -1,4 +1,6 @@
 <div class="mistery-content">
+  <audio id="background-audio3" type="audio/mp3" src="/audio/Mistery.mp3" autoplay loop></audio>
+  <audio id="background-audio4" type="audio/mp3" src="/audio/magic-44027.mp3" autoplay loop></audio>
   <div class="corner top-left morse-pulse">
     <span class="label red">दिन</span>
   </div>
