--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,15 +13,13 @@
     <p class="pista">_ | _ _ _ _ _</p>
     <p class="pista">_ | _ _ _ _ _ _ _</p><br>
     <p>
-      मैं इस नोट को एक अनुस्मारक के रूप में छोड़ता हूं कि यह कैसे काम करता है, मैं बस आशा करता हूं कि यह खो न जाए।    </p>
+      मैं इस नोट को एक अनुस्मारक के रूप में छोड़ता हूं कि यह कैसे काम करता है, मैं बस आशा करता हूं कि यह खो न जाए। </p>
     <p class="signature">एक विनम्र सेवक.</p>
     <p>पी.एस. हमारे प्रिय ने संगीत की कला की शुरुआत किस तत्व से की?</p>
     <button (click)="togglewarning()">Regresar</button>
   </div>
+
 </div>
-
-
-@if (!pregonero) {
   <audio id="background-audio0" type="audio/mp3" src="/audio/TheShireAmbience.mp3" loop></audio>
   <app-navbar></app-navbar>
   <div class="info">
@@ -32,17 +30,5 @@
     <img class="button-image" src="/img/pueblo.png" alt="" usemap="#image-map">
     <a class="images" (click)="togglePregonero()"></a>
     <a class="images2" (click)="togglewarning()"></a>
-    <a class="images3" routerLink="/cave"></a>
-
+    <a class="images3" (click)="toggleCave()"></a>
   </div>
-} @else {
-  @if (!mistery) {
-    <audio id="background-audio1" type="audio/mp3" src="/audio/CantinaBand.mp3" autoplay loop></audio>
-    <app-pregonero (finishedStory)="handleFinishedStory()"/>
-  } @else {
-    <audio id="background-audio2" type="audio/mp3" src="/audio/Mistery.mp3" autoplay loop></audio>
-    <audio id="background-audio3" type="audio/mp3" src="/audio/magic-44027.mp3" autoplay loop></audio>
-
-    <app-mistery/>
-  }
-}
