--- a/src/app/pages/pregonero/pregonero.component.css
+++ b/src/app/pages/pregonero/pregonero.component.css
@@ -9,18 +9,11 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/img/tavern.jpg') no-repeat center center;
-  background-size: cover;
+  background: url('/img/tavern2.png') no-repeat left bottom;
+  background-size: cover; /* Asegura que el fondo cubra toda el área del contenedor */
   z-index: 10;
 }
 
-.tavern p {
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 .recordatorio p{
   font-family: "Medieval";
@@ -34,28 +27,59 @@ html, body {
   max-width: 30%;
   border-radius: 10px;
   background-color:rgba(255, 255, 255, 0.3);
-}
-
-.pregonero {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: auto;
-  height: auto;
-  max-height: 50vh;
-  max-width: 50vw; /* Ajuste para evitar que sea más ancho que el 50% del viewport */
-}
-
-.bocadillo {
-  position: relative;
-  top: 3%; /* Posiciona el bocadillo negro a 10% desde la parte superior */
-  left: 5%;
-  width: 90%;
-  height: auto;
-  background: rgba(0, 0, 0, 0.5); /* Fondo negro con 50% de transparencia */
-  color: #fff;
+  text-align: center;
   padding: 20px;
-  box-sizing: border-box;
-  border-radius: 10px;
-  z-index: 20; /* Asegura que este bocadillo esté encima de otros elementos */
+  margin: 0;
 }
+
+.note {
+  position: absolute; /* O usa 'fixed' si quieres que se quede en el centro incluso cuando hagas scroll */
+  bottom: 50%;
+  left: 50%;
+  width: 40vw;
+  height: 58px;
+  /* Ajusta el margen negativo para centrar el elemento */
+  display: block;
+  cursor: grab;
+  background-color: red;
+}
+
+
+.cubo {
+  position: absolute; /* O usa 'fixed' si quieres que se quede en el centro incluso cuando hagas scroll */
+  bottom: 400px;
+  left: 430px;
+  width: 100px;
+  height: 100px;
+  /* Ajusta el margen negativo para centrar el elemento */
+  display: block;
+  cursor: grab;
+  background-color: blue;
+}
+
+@media (max-width: 100vh){
+  .note {
+    position: absolute; /* O usa 'fixed' si quieres que se quede en el centro incluso cuando hagas scroll */
+    bottom: 650px;
+    left: 300px;
+    width: 40px;
+    height: 58px;
+    /* Ajusta el margen negativo para centrar el elemento */
+    display: block;
+    cursor: grab;
+    background-color: red;
+  }
+
+  .cubo {
+    position: absolute; /* O usa 'fixed' si quieres que se quede en el centro incluso cuando hagas scroll */
+    bottom: 400px;
+    left: 430px;
+    width: 100px;
+    height: 100px;
+    /* Ajusta el margen negativo para centrar el elemento */
+    display: block;
+    cursor: grab;
+    background-color: blue;
+  }
+}
+
