--- a/src/app/pages/pregonero/pregonero.component.css
+++ b/src/app/pages/pregonero/pregonero.component.css
@@ -60,8 +60,8 @@ html, body {
 @media (max-width: 100vh){
   .note {
     position: absolute; /* O usa 'fixed' si quieres que se quede en el centro incluso cuando hagas scroll */
-    bottom: 650px;
-    left: 300px;
+    bottom: 50%;
+    left: 23vh;
     width: 40px;
     height: 58px;
     /* Ajusta el margen negativo para centrar el elemento */
@@ -72,8 +72,8 @@ html, body {
 
   .cubo {
     position: absolute; /* O usa 'fixed' si quieres que se quede en el centro incluso cuando hagas scroll */
-    bottom: 400px;
-    left: 430px;
+    bottom: 33%;
+    left: 33vh;
     width: 100px;
     height: 100px;
     /* Ajusta el margen negativo para centrar el elemento */
